--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,72 @@
-*{
+/* font syles */
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;500;600;700;800&display=swap');
+
+* {
     margin: 0px;
+    padding: 0px;
+    font-family: 'Work Sans', sans-serif;
+}
+
+/* navbar styles */
+
+.nav-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 25px 0px;
+}
+
+.nav-icon {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.nav-icon img {
+    width: 60px;
+    height: 28px;
+}
+
+.nav-icon h1 {
+    font-size: 35px;
+    font-weight: 700;
+    color: #0B0223;
+}
+
+.icon-text {
+    color: #FF42A5;
+}
+
+.nav-content {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.nav-element {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    gap: 24px;
+    color: #3C354F;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.nav-title {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    width: 200px;
+    height: 30px;
+    background-color: rgba(11, 2, 35, 0.10);
+    border-radius: 6px;
+    padding: 8px 15px;
+}
+
+.title-icon {
+    width: 28px;
+    height: 16px;
     padding: 0px;
 }
