--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 25px 0px;
+    padding: 28px 0px;
 }
 
 .nav-icon {
@@ -48,25 +48,158 @@
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 24px;
+    gap: 20px;
     color: #3C354F;
     font-size: 14px;
     font-weight: 500;
 }
 
+.nav-element a {
+    text-decoration: none;
+}
+
 .nav-title {
     display: flex;
     align-items: center;
-    gap: 18px;
-    width: 200px;
-    height: 30px;
+    gap: 15px;
+    width: 185px;
+    height: 26px;
     background-color: rgba(11, 2, 35, 0.10);
     border-radius: 6px;
-    padding: 8px 15px;
+    padding: 8px 12px;
 }
 
 .title-icon {
     width: 28px;
     height: 16px;
     padding: 0px;
+}
+
+/* bannner styles */
+
+.bannner-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 30px;
+    height: 80vh;
+    box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.05);
+}
+
+.banner-content {
+    background-image: url(./images/Group\ 14.png);
+    background-position: center;
+    background-size: cover;
+    width: 50%;
+    height: 100%;
+}
+
+.banner-text {
+    padding: 140px 110px;
+}
+
+.banner-title-1 {
+    color: #0B0223;
+    font-size: 38px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.banner-title-2 {
+    font-size: 75px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #F948B2;
+}
+
+.banner-description {
+    color: #534C64;
+    font-size: 13px;
+    font-weight: 500;
+    list-style: none;
+    padding: 10px 0px;
+}
+
+.banner-description li {
+    padding: 5px 0px;
+}
+
+.btn-1 {
+    padding: 15px 23px;
+    gap: 10px;
+    background-color: #FF42A5;
+    color: #FFF;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: 0px;
+    border-radius: 15px;
+}
+.btn-2{
+    margin-left: 10px;
+    padding: 15px 23px;
+    gap: 10px;
+    background-color: #4EC5F7;
+    color: #FFF;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border: 0px;
+    border-radius: 15px;
+}
+
+.banner-images {
+    width: 50%;
+    height: 100%;
+}
+
+.banner-img {
+    width: 85%;
+    height: 100%;
+    margin: auto;
+}
+
+
+
+
+
+
+/* for mobile view */
+
+@media screen and (max-width: 425px) {
+
+    /* Navbar and banner section */
+    .nav-container, .nav-element, .nav-content{
+        flex-direction: column;
+        gap: 27px;
+    }
+    .bannner-container{
+        flex-direction: column-reverse;
+        height: 100%;
+        width: 100%;
+    }
+    .banner-content{
+        width: 100%;
+        background-size: cover;
+    }
+    .banner-title-1{
+        font-size: 25px;
+    }
+    .banner-title-2{
+        font-size: 50px;
+    }
+    .banner-text{
+        padding: 30px 110px;
+    }
+    .banner-description{
+        font-size: 10px;
+        padding: 5px;
+    }
+    .btn-1, .btn-2{
+        padding: 10px 18px;
+        font-size: 10px;
+    }
+    .banner-img{
+        width: 100%;
+    }
 }
