--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@
     border: 0px;
     border-radius: 15px;
 }
-.btn-2{
+
+.btn-2 {
     margin-left: 10px;
     padding: 15px 23px;
     gap: 10px;
@@ -159,6 +160,130 @@
     margin: auto;
 }
 
+/* section-1 styles */
+
+.sec1-container {
+    text-align: center;
+    padding: 80px 0px;
+}
+
+.sec1-title1 {
+    color: #0B0223;
+    font-size: 35px;
+    font-weight: 700;
+    padding-bottom: 8px;
+}
+
+.sec1-title1-text {
+    color: #f74eef;
+}
+
+.sec1-title2 {
+    color: #534C64;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.sec1-content {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    padding-top: 25px;
+}
+
+.card {
+    width: 220px;
+    height: 280px;
+    text-align: left;
+}
+
+.card-img {
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+/* .card-img:hover{
+    background-image: url("./images/play-button.svg");
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: overlay;
+
+} */
+.card-description {
+    color: #534C64;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+/* section-2 styles */
+
+.sec2-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
+    gap: 150px;
+}
+
+.sec2-content {
+    width: 300px;
+    text-align: right;
+}
+
+.sec2-images {
+    width: 480px;
+    height: 500px;
+}
+
+.sec2-img1 {
+    width: 480px;
+    height: 500px;
+}
+
+.sec2-img2 {
+    width: 220px;
+    height: 250px;
+    position: relative;
+    right: 120px;
+    bottom: 170px;
+}
+
+/* section-3 styles */
+
+.sec3-container {
+    padding-top: 100px;
+    border: 2px solid black;
+    padding-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+}
+
+.sec3-box {
+    width: 200px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    align-items: center;
+    padding: 10px 5px;
+    background-color: lightgrey;
+    border-radius: 30px;
+}
+
+.sec3-box-img {
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+}
+
+.sec3-box h3 {
+    color: #0B0223;
+    font-size: 14px;
+    font-weight: 600;
+}
+
 
 
 
@@ -169,37 +294,64 @@
 @media screen and (max-width: 425px) {
 
     /* Navbar and banner section */
-    .nav-container, .nav-element, .nav-content{
+    .nav-container,
+    .nav-element,
+    .nav-content {
         flex-direction: column;
         gap: 27px;
     }
-    .bannner-container{
+
+    .bannner-container {
         flex-direction: column-reverse;
         height: 100%;
         width: 100%;
     }
-    .banner-content{
+
+    .banner-content {
         width: 100%;
         background-size: cover;
     }
-    .banner-title-1{
+
+    .banner-title-1 {
         font-size: 25px;
     }
-    .banner-title-2{
+
+    .banner-title-2 {
         font-size: 50px;
     }
-    .banner-text{
+
+    .banner-text {
         padding: 30px 110px;
     }
-    .banner-description{
+
+    .banner-description {
         font-size: 10px;
         padding: 5px;
     }
-    .btn-1, .btn-2{
+
+    .btn-1,
+    .btn-2 {
         padding: 10px 18px;
         font-size: 10px;
     }
-    .banner-img{
+
+    .banner-img {
         width: 100%;
+    }
+
+    /* section-1 */
+
+    .sec1-title1 {
+        font-size: 1.25em;
+    }
+
+    .sec1-title2 {
+        font-size: 0.6em;
+    }
+
+    .sec1-content {
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
     }
 }
