--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@
 }
 
 .banner-content {
-    background-image: url(./images/Group\ 14.png);
+    background-image: url("./images/Group\ 14.png");
     background-position: center;
     background-size: cover;
     width: 50%;
@@ -251,13 +251,22 @@
 
 /* section-3 styles */
 
-.sec3-container {
-    padding-top: 100px;
-    border: 2px solid black;
-    padding-bottom: 20px;
+.sec3-container1 {
+    margin-top: 30px;
+    padding: 120px 50px 20px 50px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    gap: 10px;
+    place-content: center;
+    justify-content: center;
+}
+
+.sec3-container2 {
+    padding: 0px 130px 80px 130px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    place-content: center;
+    align-content: center;
 }
 
 .sec3-box {
@@ -265,11 +274,21 @@
     height: 25px;
     display: flex;
     justify-content: center;
-    gap: 8px;
+    gap: 5px;
     align-items: center;
     padding: 10px 5px;
     background-color: lightgrey;
+    border: 2px solid white;
     border-radius: 30px;
+}
+
+.sec3-box:hover {
+    cursor: pointer;
+    border: 2px solid #FF42A5;
+}
+
+.sec3-box h3:hover {
+    color: #f74eef;
 }
 
 .sec3-box-img {
@@ -282,6 +301,53 @@
     color: #0B0223;
     font-size: 14px;
     font-weight: 600;
+}
+
+/* footer section styles */
+
+.footer-container {
+    height: 60vh;
+    background-color: #0B0223;
+    color: white;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding-top: 80px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.footer-title {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-title h1 {
+    color: white;
+}
+
+.footer-content {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.footer-icons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.footer-description {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 12px;
+    font-weight: 500;
+    padding: 5px;
 }
 
 
