--- a/styles.css
+++ b/styles.css
@@ -481,5 +481,21 @@
         grid-template-columns: repeat(2, 1fr);
         column-gap: 10px;
     }
+    .footer-description2{
+        padding: 10px 125px 0px 125px;
+    }
 
+}
+
+/* for tablet view */
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+    .bannner-container{
+        gap: 2px;
+    }
+    .banner-content{
+        max-width: 768px;
+        width: 100%;
+        height: 100%;
+    }
 }
